# Haru-V

./: .clang-format  .gitmodules  CMakeLists.txt  NoRttiOrExceptions.cmake  README.md
assets/: game.json
assets/maps/: climb.haru  climb.map  scripting_test.haru  scripting_test.map  shadow_test.haru  shadow_test.map  test.haru  test.map
assets/materials/: damaged_helmet.json  dev_1.json
assets/scripts/: climb.lua  scripting_test.lua
assets/shaders/: base.frag  base.json  base.vert  combine.frag  combine.json  combine.vert  shadow.frag  shadow.geom  shadow.json  skybox.frag  skybox.json  test.frag  test.glsl  test.json  test.vert  uniform_lighting.glsl  uniform_renderer.glsl  utils.glsl
docs/: haru.hexpat  pipeline.md
engine/: CMakeLists.txt
engine/dependencies/: CMakeLists.txt
engine/dependencies/fmod/: CMakeLists.txt
engine/dependencies/stb/: CMakeLists.txt
engine/dependencies/tinyobjloader/: CMakeLists.txt
engine/include/audio/: AudioInstance.h  AudioSystem.h  DebugFMOD.h
engine/include/core/: Debug.h  DebugVk.h
engine/include/file/: BinaryParser.h  FileSystem.h  HdrImageFile.h  ImageFile.h  JsonFile.h
engine/include/math/: ShadowMatrixCalculator.h  Transform.h
engine/include/physics/: PhysicsErrorCallback.h  PhysicsLayer.h  PhysicsScene.h  PhysicsSystem.h  PhysicsUtilities.h
engine/include/script/: LuaSandbox.h
engine/include/vulkan/: DebugVk.h  MeshCache.h  ShaderCompiler.h  TextureCache.h  VertexFormats.h  VulkanBase.h  VulkanBuffer.h  VulkanDevice.h  VulkanImage.h  VulkanMesh.h  VulkanPipeline.h  VulkanPipelineConfig.h  VulkanTexture.h  VulkanUniformBufferSet.h
engine/include/window/: Mouse.h  Window.h
engine/src/audio/: AudioInstance.cpp  AudioSystem.cpp
engine/src/file/: BinaryParser.cpp  FileSystem.cpp  HdrImageFile.cpp  ImageFile.cpp  JsonFile.cpp
engine/src/math/: ShadowMatrixCalculator.cpp
engine/src/physics/: PhysicsErrorCallback.cpp  PhysicsLayer.cpp  PhysicsScene.cpp  PhysicsSystem.cpp
engine/src/script/: LuaSandbox.cpp
engine/src/vulkan/: MeshCache.cpp  ShaderCompiler.cpp  TextureCache.cpp  VertexFormats.cpp  VulkanBase.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanPipelineConfig.cpp  VulkanTexture.cpp  VulkanUniformBufferSet.cpp  vk_mem_alloc.cpp
engine/src/window/: Mouse.cpp  Window.cpp
game/: CMakeLists.txt  DeferredContext.cpp  DeferredContext.h  DeferredFramebuffer.cpp  DeferredFramebuffer.h  Game.cpp  Game.h  JsonFiles.cpp  JsonFiles.h  MeshUtilities.cpp  MeshUtilities.h  Renderer.cpp  Renderer.h  VertexFormats.cpp  VertexFormats.h  main.cpp
game/assets/: game.json
game/assets/audio/: Master.bank  Master.strings.bank
game/assets/maps/: scripting_test.haru  scripting_test.map
game/assets/maps/puzzle/: level0.haru  level0.map  level1.haru  level1.map  level2.haru  level2.map  level3.haru  level3.map
game/assets/maps/puzzle/autosave/: level1.1.map
game/assets/materials/: boom_box.json  dev_2.json  dev_3.json  dev_4.json  dev_5.json  power_sphere.json  slab.json  trigger.json
game/assets/pipelines/: base_forward.json  combine.json  post_processing.json  present.json  screen_line.json  screen_rect.json
game/assets/scripts/: scripting_test.lua  signals.lua
game/assets/scripts/puzzle/: level0.lua  level1.lua  level2.lua  level3.lua
game/assets/shader_includes/: csm.glsl  fxaa.glsl  fxaa_quality.glsl  ibl.glsl  uniform_lighting.glsl  uniform_renderer.glsl
game/assets/shaders/: base.frag  base.vert  base_forward.frag  combine.frag  csm.glsl  fullscreen.vert  ibl.glsl  pbr.glsl  post_processing.frag  present.frag  screen_line.frag  screen_line.vert  screen_rect.frag  screen_rect.vert  shadow.frag  shadow.geom  shadow.vert  skybox.frag  skybox.vert  tone_mapping.frag  uniform_lighting.glsl  utils.glsl
game/gfx/: DeferredContext.cpp  DeferredContext.h  DeferredFramebuffer.cpp  MeshUtilities.cpp  MeshUtilities.h  PbrMaterialCache.cpp  PbrMaterialCache.h  Renderer.cpp  Renderer.h  VertexFormats.cpp  VertexFormats.h
game/include/: Game.h  Globals.h  JsonFiles.h
game/include/actors/: AFuncBrush.h  AFuncButton.h  AFuncMove.h  AFuncPhys.h  ALightPoint.h  ALightWorld.h  APlayer.h  APlayerNoClip.h  APropPowerSphere.h  APropTest.h  APropTestBox.h  APropTestModel.h  ATrigger.h  ATriggerOnce.h  ATriggerPlayer.h  ATriggerPowerSphere.h  ATriggerTest.h  AWorldSpawn.h  Actor.h  Scene.h
game/include/components/: PlayerMovement.h  PlayerUse.h
game/include/gfx/: BitmapTextRenderer.h  DeferredContext.h  DeferredFramebuffer.h  ForwardFramebuffer.h  MeshUtilities.h  PbrMaterialCache.h  PbrRenderer.h  PostProcessingContext.h  PostProcessingFramebuffer.h  Renderer.h  ShadowContext.h  ShadowMaps.h  SingleTextureMaterialCache.h
game/include/map/: Brushes.h  EntityLoaders.h  LoadEntities.h  MapData.h  MapParser.h
game/include/physics/: PhysicsSimulationEventCallback.h
game/include/script/: GameLua.h
game/include/ui/: GameHUD.h
game/src/: Game.cpp  Globals.cpp  JsonFiles.cpp  main.cpp
game/src/actors/: AFuncBrush.cpp  AFuncButton.cpp  AFuncMove.cpp  AFuncPhys.cpp  ALightPoint.cpp  ALightWorld.cpp  APlayer.cpp  APlayerNoClip.cpp  APropPowerSphere.cpp  APropTest.cpp  APropTestBox.cpp  APropTestModel.cpp  ATrigger.cpp  ATriggerPlayer.cpp  ATriggerPowerSphere.cpp  ATriggerTest.cpp  AWorldSpawn.cpp  Scene.cpp
game/src/components/: PlayerMovement.cpp  PlayerUse.cpp
game/src/gfx/: BitmapTextRenderer.cpp  DeferredContext.cpp  DeferredFramebuffer.cpp  ForwardFramebuffer.cpp  MeshUtilities.cpp  PbrMaterialCache.cpp  PbrRenderer.cpp  PostProcessingContext.cpp  PostProcessingFramebuffer.cpp  Renderer.cpp  ShadowContext.cpp  ShadowMaps.cpp  SingleTextureMaterialCache.cpp
game/src/map/: Brushes.cpp  EntityLoaders.cpp  LoadEntities.cpp  MapData.cpp  MapParser.cpp
game/src/physics/: PhysicsSimulationEventCallback.cpp
game/src/script/: GameLua.cpp
game/src/ui/: GameHUD.cpp
